[tool.poetry]
name = "repl_nix_Deployment-of-ML-models-in-Heroku-Flask"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
pandas = "^2.2.1"
requests = "^2.31.0"
scikit-learn = "^1.4.1"
Flask = "^3.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
